--- a/securecam/index.html
+++ b/securecam/index.html
@@ -18,28 +18,26 @@
 
 <h3>Demo: Take a Selfie With JavaScript</h3>
 
-<div class="container">
+<div class="display-cover">
+    <video autoplay></video>
+    <canvas class="d-none"></canvas>
 
-  <div class="app">
-
-    <a href="#" id="start-camera" class="visible">Touch here to start the app.</a>
-    <video id="camera-stream"></video>
-    <img id="snap">
-
-    <p id="error-message"></p>
-
-    <div class="controls">
-      <a href="#" id="delete-photo" title="Delete Photo" class="disabled"><i class="material-icons">delete</i></a>
-      <a href="#" id="take-photo" title="Take Photo"><i class="material-icons">camera_alt</i></a>
-      <a href="#" id="download-photo" download="selfie.png" title="Save Photo" class="disabled"><i class="material-icons">file_download</i></a>  
+    <div class="video-options">
+        <select name="" id="" class="custom-select">
+            <option value="">Select camera</option>
+        </select>
     </div>
 
-    <!-- Hidden canvas element. Used for taking snapshot of video. -->
-    <canvas></canvas>
+    <img class="screenshot-image d-none" alt="">
 
-  </div>
-
+    <div class="controls">
+        <button class="btn btn-danger play" title="Play"><i data-feather="play-circle"></i></button>
+        <button class="btn btn-info pause d-none" title="Pause"><i data-feather="pause"></i></button>
+        <button class="btn btn-outline-success screenshot d-none" title="ScreenShot"><i data-feather="image"></i></button>
+    </div>
 </div>
+
+
 
 
 <script src="assets/js/script.js"></script>
