--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -22,8 +22,10 @@
   <script src="detect.js" type="text/babel"></script>
 
   <!-- We will put our React component inside this div. -->
-  <div id="root" style="float: left;"></div>
-  <video style="float: right;" id="recordingcanvas"  width="720" height="650"  controls></video>
+  <div>
+  <div id="root" style="display: block;"></div>
+  <video style="display: block;" id="recordingcanvas"  width="300" height="300"  controls></video>
+  </div>
   
 
   <script>
