--- a/JsCam/rec.html
+++ b/JsCam/rec.html
@@ -115,7 +115,7 @@ function downloadVideo(src, filename, type) {
 startButton.addEventListener("click", function() {
   navigator.mediaDevices.getUserMedia({
       video: true,
-      audio: false
+      audio: true
     }).then(stream => {
       preview.srcObject = stream;
       downloadButton.href = stream;
