--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -93,7 +93,7 @@ function downloadVideo(data, filename) {
 function getVid(streamz,thing) {
 var today = new Date();
 var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
-var time = today.getHours() + ":" + today.getMinutes() + "-" + today.getSeconds();
+var time = today.getHours() + "-" + today.getMinutes() + "-" + today.getSeconds();
 var dateTime = date+'_'+time;
 
   startRecording(streamz, recordingTimeMS)
