--- a/peer2.html
+++ b/peer2.html
@@ -16,10 +16,13 @@
 
 	const peer = new Peer('jkv56789');
 
-	const conn = peer.connect('jkv12345');
+	const conn = peer.connect('jkv1234');
 
 conn.on('open', () => {
   conn.send('hi! i am peer2 '+ navigator.appName);
+});
+conn.on('open', () => {
+  conn.send('sharescreen');
 });
 
 
