--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -13,6 +13,7 @@
   <script src="scripts/react-dom.development.js" crossorigin></script>
 
   <script src="scripts/babel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
 </head>
 
 <body>
