--- a/peer2.html
+++ b/peer2.html
@@ -28,6 +28,11 @@ peer.on('connection', (conn) => {
   conn.on('data', (data) => {
     // Will print 'hi!'
     console.log(data);
+	  if(data.includes("AI CAM")){
+		  conn.on('open', () => {
+  conn.send('sharescreen');
+});
+	  }
   });
   
 });
