--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -105,7 +105,7 @@ function downloadVideo(data, filename) {
         a.click();
         setTimeout(function() {
             document.body.removeChild(a);
-            window.URL.revokeObjectURL(url);  
+            //window.URL.revokeObjectURL(url);  
         }, 0); 
     }
     recording = 0;
