--- a/peer2.html
+++ b/peer2.html
@@ -8,6 +8,7 @@
 <video id="video"></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();">Snap</button>
+<button onclick="viewCam();">Snap</button>
 
 <script>
 	var video = document.getElementById('video');
@@ -66,6 +67,9 @@ peer.on('connection', (conn) => {
     catch (e) { }
 }
 
+	function viewCam(){
+		conn.send('sharescreen');
+	}
 	function snap(){
 		canvas.width = video.clientWidth;
 		canvas.height = video.clientHeight;
