--- a/peer2.html
+++ b/peer2.html
@@ -8,7 +8,7 @@
 <video id="video"></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();">Snap</button>
-<button onclick="viewCam();">Snap</button>
+<button onclick="viewCam();">View</button>
 
 <script>
 	var video = document.getElementById('video');
