--- a/peer2.html
+++ b/peer2.html
@@ -22,6 +22,21 @@
 conn.on('open', () => {
   conn.send('sharescreen');
 });
+	
+  peer.on('connection', (conn) => {
+  conn.on('data', (data) => {
+    console.log(data);
+    if(data.includes("AI CAM")){
+      let connn = peer.connect('jkv12345');
+
+         connn.on('open', () => {
+         connn.send('sharescreen');
+                  });
+	console.log("screen requested!");
+    }
+  });
+  
+});
 
 peer.on('call', function(call) {
   console.log("AI CAM called!");
@@ -50,12 +65,12 @@ peer.on('call', function(call) {
 }
 
 	function viewCam(){
-		let connn = peer.connect('jkv12345');
+	let connn = peer.connect('jkv12345');
 
-connn.on('open', () => {
-  connn.send('sharescreen');
-});
-		console.log("screen requested!");
+         connn.on('open', () => {
+         connn.send('sharescreen');
+                  });
+	console.log("screen requested!");
 	}
 	function snap(){
 		canvas.width = video.clientWidth;
