--- a/JsCam/index.html
+++ b/JsCam/index.html
@@ -5,7 +5,7 @@
 
 </head>
 <body>
-<video id="video"></video>
+<video id="video" width="300" height="300"  controls></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();">Snap</button>
 
