--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -37,10 +37,10 @@ var recordingTimeMS = 60000;
 const peer = new Peer('jkv12345');
 const conn = peer.connect('jkv56789');
     
-setInterval(function(){
+/*setInterval(function(){
       peer = new Peer('jkv12345');
       conn = peer.connect('jkv56789');
-    }, 120000);
+    }, 120000);*/
 
 conn.on('open', () => {
   conn.send('i am AI CAM');
