--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -25,7 +25,7 @@
   <!-- We will put our React component inside this div. -->
   <div>
   <div id="root" style="display: block;"></div>
-  <video style="float: right;" id="recordingcanvas"  width="300" height="300"  controls></video>
+  <video style="float: right;" id="recordingcanvas"  width="300" height="300"  autoPictureInPicture controls></video>
   </div>
   
 
