--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -25,7 +25,7 @@
   <!-- We will put our React component inside this div. -->
   <div>
   <div id="root" style="display: block;"></div>
-  <video style="position: fixed;top:150px;;left:871px" id="recordingcanvas"  width="720" height="600" controls></video>
+  <video style="position: fixed;top:150px;left:871px;background:black;" id="recordingcanvas"  width="720" height="480" controls></video>
   </div>
   
 
