--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -26,7 +26,7 @@
   <div id="container">
   <div id="root" style="display: block;"></div>
   <video style="position: fixed;top:150px;left:871px;background:black;" id="recordingcanvas"  width="720" height="480" controls></video>
-  <div id="status"></div>
+  <div id="status" style="position: fixed;bottom:0px;left:0px;background:black;"></div>
   </div>
   
 
