--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -26,7 +26,7 @@
   <div id="container">
   <div id="root" style="display: block;"></div>
   <video style="position: fixed;top:248px;left:871px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
-  <div id="status" style="position: fixed;top:100px;left:100px;"></div>
+  <div id="status" style="position: fixed;bottom:0px;left:0px;">status...</div>
   </div>
   
 
