--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -26,8 +26,8 @@
   <div id="container">
   <div id="root" style="display: block;"></div>
   <video style="position: fixed;top:248px;left:871px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
-  <div id="status" style="position: fixed;bottom:0px;left:0px;">status...</div>
-  <div id="objectdetection" style="position: fixed;top:50px;left:7px;">status...</div>
+  <div id="status" style="position: fixed;bottom:0px;left:0px;"></div>
+  <div id="objectdetection" style="position: fixed;top:50px;left:7px;"></div>
   </div>
   
 
