--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -14,7 +14,7 @@
 
   <script src="scripts/babel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
-  <link rel=”apple-touch-icon” sizes=”152×152″ href=”myicon.png”/>
+  <link rel="apple-touch-icon" sizes="152×152" href="myicon.png"/>
 </head>
 
 <body>
