--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>AI Cam</title>
+  <link rel="stylesheet" href="styles.css">
   <!-- Load TensorFlow.js-->
   <script src="scripts/tf.min.js"></script>
   <!-- Load the coco-ssd model. -->
