--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -29,7 +29,7 @@
   <div id="container">
   <div id="root" style="display: block;"></div>
   <video style="position: fixed;top:248px;left:841px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
-  <div id="status" style="color:white;"></div>
+  <div id="status" style="position: fixed;bottom:0px;left:7px;color:white;"></div>
   <div id="objectdetection" style="position: fixed;top:50px;left:7px;color:white;"></div>
   </div>
   
