--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -15,6 +15,9 @@
 
   <script src="scripts/babel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
+  
+  <script type="text/javascript" src="scripts/qrcode.min.js"></script>
+  
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" sizes="152×152" href="myicon.png"/>
 </head>
