--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -34,6 +34,7 @@
   <video style="position: fixed;top:248px;left:841px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
   <div id="status" style="position: fixed;bottom:0px;left:7px;color:white;"></div>
   <div id="objectdetection" style="position: fixed;top:50px;left:7px;color:white;"></div>
+  <div id="qrcode" style="position:fixed;width:100px; height:100px;top:15px;left:215px;background:white;"></div>
   </div>
   
 
@@ -45,7 +46,14 @@ var recordingTimeMS = 60000;
 var lastPeerId = null;
 var peer = null; // own peer object
 var conn = null;
-    
+function makeQrCode (text,width) {		
+	let qrcode = new QRCode(document.getElementById("qrcode"), {
+		width : width,
+	height : width
+	});
+	
+	qrcode.makeCode(text);
+}    
 peer = new Peer('jkv12345', {
                         debug: 2
                     });
@@ -61,6 +69,7 @@ peer.on('open', function (id) {
 
                         console.log('ID: ' + peer.id);
                         document.getElementById("status").innerHTML = 'ID: ' + peer.id;
+                        makeQrCode(peer.id,200);
                     });
 peer.on('disconnected', function () {
                         
