--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -34,7 +34,7 @@
   <video style="position: fixed;top:248px;left:841px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
   <div id="status" style="position: fixed;bottom:0px;left:7px;color:white;"></div>
   <div id="objectdetection" style="position: fixed;top:50px;left:7px;color:white;"></div>
-  <div id="qrcode" style="position:fixed;width:100px; height:100px;top:15px;left:215px;background:white;"></div>
+  <div id="qrcode" style="position:fixed;width:100px; height:100px;top:70px;right:105px;background:white;"></div>
   </div>
   
 
