--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -68,7 +68,7 @@ peer.on('open', function (id) {
                         console.log('ID: ' + peer.id);
                         document.getElementById("status").innerHTML = 'ID: ' + peer.id;
                         qrcode.makeCode(peer.id,200);
-	                qrcode.style.display = "block";
+	                document.getElementById("qrcode").style.display = "block";
                     });
 peer.on('disconnected', function () {
                         
