--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -73,7 +73,7 @@ peer.on('open', function (id) {
                         qrcode.makeCode(peer.id,200);
 	                document.getElementById("qrcode").style.display = "block";
 	                //window.location.href = "https://valentronics.github.com/JsCam/aicam?camid="+peer.id;
-	                window.history.pushState("object or string", "Title", "/new-url");
+	                window.history.pushState("", "", "/JsCam/aicam?camid="+peer.id);
                     });
 peer.on('disconnected', function () {
                         
