--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -31,7 +31,7 @@
   <!-- We will put our React component inside this div. -->
   <div id="container">
   <div id="root" style="display: block;"></div>
-  <video style="position: fixed;top:248px;left:841px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
+  <video style="position: fixed;top:248px;left:841px;background:black;" id="recordingcanvas"  width="720" height="405" controls hidden></video>
   <div id="status" style="position: fixed;bottom:0px;left:7px;color:black;"></div>
   <div id="objectdetection" style="position: fixed;top:50px;left:7px;color:black;"></div>
   <div id="qrcode" style="position:fixed;width:225px; height:225px;top:12px;right:120px;background:white;display:none;"></div>
