--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -138,10 +138,12 @@ function objectDetect() {
 	
   if(!detectObjects){
 	  detectObjects = true;
-	  console.log("detection turned on!");
+	  console.log("object detection turned on!");
+	  document.getElementById("status").innerHTML = "object detection turned on!";
   }else{
 	  detectObjects = false;
 	  console.log("detection turned off!");
+	  document.getElementById("status").innerHTML = "object detection turned off!";
   }
 }
 function startRecording(stream, lengthInMS) {
