--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -33,7 +33,7 @@
   <div id="container">
   <div id="root" style="display: block;" onClick="objectDetect();"></div>
   <video style="position: fixed;top:247px;right:115px;background:black;" id="recordingcanvas"  width="720" height="405" controls></video>
-  <div id="status" style="position: fixed;bottom:0px;left:7px;color:black;"></div>
+  <div id="status" ></div>
   <div id="objectdetection" style="position: fixed;top:50px;left:7px;color:black;"></div>
   <div id="qrcode" style="position:fixed;width:225px; height:225px;top:12px;right:115px;background:white;display:none;"></div>
   </div>
