--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -32,7 +32,7 @@
   <!-- We will put our React component inside this div. -->
   <div id="container">
   <div id="root" style="display: block;" onClick="objectDetect();"></div>
-  <video controls></video>
+  <video id="recordingcanvas" controls></video>
   <div id="status" ></div>
   <div id="objectdetection" ></div>
   <div id="qrcode" ></div>
