--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
-  <title>Quick Surveillance Cam</title>
+  <title>Quick Surve</title>
   
   <!-- Load TensorFlow.js-->
   <script src="scripts/tf.min.js"></script>
@@ -25,7 +25,7 @@
 
 <body>
 
-  <h1>Quick Surveillance Cam</h1>
+  <h1>Quick Surve</h1>
   <!-- Load our React component. -->
   <script src="detect.js" type="text/babel"></script>
 
