--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -20,7 +20,7 @@
   <script type="text/javascript" src="scripts/qrcode.min.js"></script>
   
   <link rel="stylesheet" href="styles.css">
-  <link rel="shortcut icon" sizes="152×152" href="myicon.png"/>
+  <link rel="shortcut icon" sizes="152×152" href="recorder.png"/>
 </head>
 
 <body>
