--- a/JsCam/aicam/index.html
+++ b/JsCam/aicam/index.html
@@ -71,7 +71,7 @@ peer.on('open', function (id) {
                         disconnected = false;
                         console.log('ID: ' + peer.id);
                         document.getElementById("status").innerHTML = 'CID: ' + peer.id;
-                        qrcode.makeCode(peer.id,200);
+                        qrcode.makeCode('https://valentronics.github.io/JsCam/aicam/view/?rcid='+peer.id,200);
 	                document.getElementById("qrcode").style.display = "block";
 	                //window.location.href = "https://valentronics.github.com/JsCam/aicam?cid="+peer.id;
 	                window.history.pushState("", "", "/JsCam/aicam?cid="+peer.id);
