--- a/JsCam/aicam/stream.html
+++ b/JsCam/aicam/stream.html
@@ -54,7 +54,7 @@ var qrcode = null;
      peer = new Peer({debug: 2});
     }
 qrcode = new QRCode(document.getElementById("qrcode"), {
-		text:peer.id,
+		text:https://valentronics.github.io/JsCam/aicam/view/?rcid='+peer.id,
 	        width : 128,
 	        height : 128
 	});
@@ -71,7 +71,7 @@ peer.on('open', function (id) {
 
                         console.log('ID: ' + peer.id);
                         document.getElementById("status").innerHTML = 'SID: ' + peer.id;
-                        qrcode.makeCode(peer.id,200);
+                        qrcode.makeCode(https://valentronics.github.io/JsCam/aicam/view/?rcid='+peer.id,200);
 	                document.getElementById("qrcode").style.display = "block";
 	                //window.location.href = "https://valentronics.github.com/JsCam/aicam?cid="+peer.id;
 	                window.history.pushState("", "", "/JsCam/aicam/shop.html?cid="+peer.id);
