--- a/JsCam/aicam/stream.html
+++ b/JsCam/aicam/stream.html
@@ -54,7 +54,7 @@ var qrcode = null;
      peer = new Peer({debug: 2});
     }
 qrcode = new QRCode(document.getElementById("qrcode"), {
-		text:https://valentronics.github.io/JsCam/aicam/view/?rcid='+peer.id,
+		text:'https://valentronics.github.io/JsCam/aicam/view/?rcid='+peer.id,
 	        width : 128,
 	        height : 128
 	});
