--- a/JsCam/aicam/stream.html
+++ b/JsCam/aicam/stream.html
@@ -206,6 +206,18 @@ function downloadVideo(data, filename) {
     recording = 0;
 }
 
+function flashOn(){
+window.ttrack.applyConstraints({
+            advanced: [{torch: true}]
+          });
+}
+	  
+function flashOff(){
+window.ttrack.applyConstraints({
+            advanced: [{torch: false}]
+          });
+}
+
 function getVid(streamz,thing) {
 var today = new Date();
 var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
