--- a/JsCam/aicam/stream.html
+++ b/JsCam/aicam/stream.html
@@ -124,7 +124,9 @@ peer.on('connection', (conn) => {
       peer.call(conn.peer, window.stream);
     }else if(data.includes("flashon")){
 	     flashOn();
-	     }
+	     }else if(data.includes("flashoff")){
+		      flashOff();
+		      }
   });
   
 });
